# spots-in-space

./: .gitattributes  .gitignore  README.md  REQUIREMENTS.txt  demo.ipynb  download_test_files.sh  generating_training_images.ipynb  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
code/: adjust_orientation.R  mouse_processing_pipeline.R  sawg-environment.yml  setup.cfg  setup.py  spatial_config.yml  spot_table_vis.py
code/Macaque_processing/: merscope-progress.ipynb  test_segmentation_pipeline.ipynb
code/celltype_mapping/: celltype_mapping.py  scrattch_mapping.R  tangram-macaque-evaluate.ipynb
code/celltype_mapping/bkp_cell_type_mapper/: ThrCDMcor.ipynb  cell_type_mapper_workflow_WMB.md  run_cell_type_mapper_pipeline.py
code/domain_detection/: SpaGCN_brain3_thalamus_example.ipynb  adj_matrix_length_decay_param_illustration.ipynb
code/gene_panel_selection/: AIT19-panel.ipynb  geneBasis-cortical-macaque.ipynb  geneBasis-subcortical-panel.ipynb  geneBasis.R  gene_panel_demo.ipynb  gene_panel_selection.py  gene_panel_test_template.ipynb  mFISHTools.R  mFISHtools_AIT11.5.ipynb  mFISHtools_frac_mapped.R  macaque_bg_propose.ipynb  macaque_cortex_propose.ipynb  macaque_mtg_propose.ipynb  macaque_nac_propose.ipynb
code/merscope_processing/: Add metadata to h5ad files.ipynb  DEPR_Add metadata to h5ad files.ipynb  Spatial_subsetting_spot_data.ipynb  add meta to concat'd h5ad from tracker.ipynb  basic_processing_pipeline_v2.R  basic_processing_pipeline_v2_human.R  cell_cell_interaction_calculation.ipynb  check files against list.ipynb  concat h5ad old.ipynb  concat_h5ad.ipynb  concat_h5ad_trygve.ipynb  convert_feather_to_tax.R  human_pipeline_concat_h5ad.R  human_pipeline_eg.R  map_knn.R  modify reseg cbg and meta old.ipynb  pizza_talk_plots.ipynb  plot cellbygene.ipynb  plot_blank_counts_vs_fpkm.ipynb  plot_cell_by_gene.ipynb  pseudotime calculation.ipynb  run_RStudio_from_docker_on_hpc  spatial cirro reorg attempts.ipynb  spatial_wrangling.py  zhuang_cci_rewrite_attempt.ipynb
code/sawg/: __init__.py  celltype_mapping.py  expression_dataset.py  hpc.py  image.py  qc.py  segmentation.py  spatial_dataset.py  spot_table.py  util.py
code/segmentation/: baysor_tiling.ipynb  hpc_test.ipynb  segmentation.py  segmentation_demo.ipynb  segmentation_hpc_test_functions.ipynb
code/stereoseq/: BGI_dataset1.ipynb  human data.ipynb  tangram-convert-to-anndata.ipynb
code/visualization/: viewing_transcripts_in_napari.ipynb
demos/: download_merscope_test_files.sh  download_stereoseq_test_files.sh  download_xenium_test_files.sh  generating_training_images.ipynb  merscope_demo.ipynb  stereoseq_demo.ipynb  training_a_custom_cellpose_model.md  xenium_demo.ipynb
docs/: conf.py  image.rst  index.rst  modules.rst  segmentation.rst  spot_table.rst
docs/_build/doctrees/: docs.doctree  environment.pickle  (+10 more)
sis/: __init__.py  _version.py  celltype_mapping.py  expression_dataset.py  hpc.py  image.py  segmentation.py  spatial_dataset.py  spatialdata.py  spot_table.py  util.py
support_files/: scrattch_mapping.R  spatial_config.yml
tests/: test_spots_in_space.py
topics/: analysis_packages.md  cell_type_mapping.md  data_formatting.md  visualization.md
(+41 files in other folders)
