[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "sis/_version.py"
versionfile_build = "sis/_version.py"
tag_prefix = ""

[project]
name = "spots-in-space"
version = "0.1"
description = "spatial transcriptomics analysis and beyond"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Allen Institute Spatial Analysis Working Group"}]
license = {file = "LICENSE"}
dependencies = ["numpy",
"pandas",
"scipy",
"scikit-learn",
"anndata",
"seaborn",
"matplotlib",
"scanpy",
"matplotlib",
"tqdm",
"shapely",
"rasterio",
"geopandas"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/berl/spots-in-space"
Changelog = "https://github.com/berl/spots-in-space/releases"
Issues = "https://github.com/berl/spots-in-space/issues"
CI = "https://github.com/berl/spots-in-space/actions"


[project.optional-dependencies]
test = ["pytest"]
