[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "sis/_version.py"
versionfile_build = "sis/_version.py"
tag_prefix = ""

[project]
name = "spots-in-space"
version = "0.1"
description = "spatial transcriptomics analysis and beyond"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Allen Institute Spatial Analysis Working Group"}]
license-files = ["LICENSE"]
dependencies = [
    'numpy',
    'scipy==1.13.0',
    'matplotlib>=3.8.4',
    'seaborn>=0.13.2', 
    'pandas>=2.2.2', 
    'scikit-learn>=1.4.2', 
    'scikit-image>=0.25.2', 
    'geopandas>=0.14.3', 
    'tqdm>=4.66.2', 
    'rasterio>=1.3.10', 
    'shapely>=2.0.6', 
    'geojson>=3.2.0', 
    'anndata>=0.10.7', 
    'umap-learn', 
    'scanpy>=1.10.1', 
    'pyarrow==19.0.1',
    'ipywidgets>=8.0.6',
]

[tool.setuptools]
packages = ["sis"]

[build-system]
requires = ["setuptools>=42", "versioneer-518"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/AllenInstitute/spots-in-space"
Changelog = "https://github.com/AllenInstitute/spots-in-space/releases"
Issues = "https://github.com/AllenInstitute/spots-in-space/issues"
CI = "https://github.com/AllenInstitute/spots-in-space/actions"


[project.optional-dependencies]
cellpose = ["cellpose==3.0.7"]
test = ["pytest", "spatialdata[extra]>=0.6.1", "cellpose==3.0.7"]
spatialdata = ["spatialdata[extra]>=0.6.1"]